--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </a>
         </div>
         <div class="buttons">
-          <a href="#schedule" class="btn mobile-margin">Streaming Schedule <i class="fas fa-chevron-right"></i></a>
+          <a href="#schedule" class="btn mobile-margin">Streaming <i class="fas fa-chevron-right"></i></a>
           <a href="#nextgen" class="btn">NextGen <i class="fas fa-chevron-down"></i></a>
         </div>
 
@@ -112,7 +112,7 @@
         <div class="icons">
           <div class="next-stream-announcement">
             <h4>Next Stream</h4>
-            <h5 class="stream-link"><a href="#"><i class="fab fa-youtube"></i> YouTube</a></h5>
+            <a href="#" class="btn">To YouTube Stream</a>
           </div>
           <h5>World of Warcraft</h5>
           <p>Follow the adventures and battles of Warchief</p>
@@ -208,7 +208,7 @@
           </div>
           <div class="nextgen-service-box-text">
             <h4>Birthday Parties</h4>
-            <p>All the hottest titles of eSports and more!</p>
+            <p>Turn your birthday into a gaming event!</p>
             <p>Take up a challenge and win prizes!</p>
           </div>
         </div>
@@ -266,10 +266,10 @@
           </div>
         </div>
         <div class="icons">
-          <h5>NextGen</h5>
-          <p>Classic reborn!</p>
-          <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+          <h5>Gaming Fuel</h5>
+          <p>Get a refreshment</p>
+          <p>We offer wide variety of flavours, from classics to latest.</p>
+          <p class="mb-12">All cooled and ready for serving</p>
         </div>
       </div>
     </div>
@@ -413,7 +413,7 @@
     <div class="section-container">
       <div class="row row-3">
         <div class="profile">
-
+          <h4 class="follow-title">WarchiefGaming</h4>
         </div>
         <div class="icons">
 
