--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         </div>
         <div class="icons">
           <h5>Doom</h5>
-          <p>Classic reborn!</p>
-          <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+          <p>The game that started it all!</p>
+          <p>Relive the classic, fight through demons, hellspawns and abominations.</p>
+          <p class="mb-12">Conquer hell itself by sheer will and superior firepower!</p>
         </div>
       </div>
       <div class="row row-1">
@@ -160,7 +160,8 @@
         <div class="icons">
           <h5>Unreal Tournament '99</h5>
           <p>It begins!</p>
-          <p>Battle for fame and glory, </p>
+          <p>Battle for fame, glory and fat stacks of credits!</p>
+          <p>The winner takes it all, everyone else end up as your killstreak statistics.</p>
           <p class="mb-12">May the best man win!</p>
         </div>
       </div>
