--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
           <div class="monster-can-right">
             <h4>Classic</h4>
             <p>Original Monster taste</p>
+            <p>The flavour that started it all, still refreshing, still kicking!</p>
+            <p>Available always!</p>
           </div>
         </div>
       </div>
@@ -301,7 +303,11 @@
               <img src="img/monster2.png" alt="monster drink can" />
             </div>
           </div>
-          <div class="monster-can-right"></div>
+          <div class="monster-can-right">
+            <h4>Zero Ultra</h4>
+            <p>Like surfing on an avalanche, Zero Ultra brings cool refreshment and energizing.</p>
+            <p>Ice cold breezing taste, now with less sugar!</p>
+          </div>
         </div>
       </div>
     </div>
@@ -317,8 +323,9 @@
             </div>
           </div>
           <div class="monster-can-right">
-            <h4>Classic</h4>
-            <p>Original Monster taste</p>
+            <h4>Absolute Zero</h4>
+            <p>Low sugar, low carbs cooling refreshment.</p>
+            <p></p>
           </div>
         </div>
       </div>
@@ -332,7 +339,9 @@
               <img src="img/monster4.png" alt="monster drink can" />
             </div>
           </div>
-          <div class="monster-can-right"></div>
+          <div class="monster-can-right">
+            <h4>Ultra Sunshine</h4>
+          </div>
         </div>
       </div>
     </div>
@@ -348,7 +357,7 @@
             </div>
           </div>
           <div class="monster-can-right">
-            <h4>Classic</h4>
+            <h4>Ultra Citrone</h4>
             <p>Original Monster taste</p>
           </div>
         </div>
@@ -363,7 +372,9 @@
               <img src="img/monster6.png" alt="monster drink can" />
             </div>
           </div>
-          <div class="monster-can-right"></div>
+          <div class="monster-can-right">
+            <h4>Ultra Red</h4>
+          </div>
         </div>
       </div>
     </div>
@@ -379,7 +390,7 @@
             </div>
           </div>
           <div class="monster-can-right">
-            <h4>Classic</h4>
+            <h4>Low-Carb</h4>
             <p>Original Monster taste</p>
           </div>
         </div>
@@ -394,7 +405,9 @@
               <img src="img/monster8.png" alt="monster drink can" />
             </div>
           </div>
-          <div class="monster-can-right"></div>
+          <div class="monster-can-right">
+            <h4>Lewis Hamilton</h4>
+          </div>
         </div>
       </div>
     </div>
