--- a/index.html
+++ b/index.html
@@ -187,9 +187,10 @@
         </div>
         <div class="icons">
           <h5>NextGen</h5>
-          <p>Classic reborn!</p>
-          <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+          <p>Gaming House</p>
+          <p>We offer all the hottest new titles in gaming industry.</p>
+          <p class="mb-12">Setting your gaming experience to a whole new level.</p>
+          <p>Gaming tournaments, live streams, parties and more!</p>
         </div>
       </div>
       <div class="nextgen-services-container">
@@ -201,6 +202,7 @@
             <h4>Tournaments</h4>
             <p>All the hottest titles of eSports and more!</p>
             <p>Take up a challenge and win prizes!</p>
+            <p>Tournament events will be anounced on our social media, so follows us and keep in touch!</p>
           </div>
         </div>
         <div class="nextgen-service-box">
@@ -210,7 +212,7 @@
           <div class="nextgen-service-box-text">
             <h4>Birthday Parties</h4>
             <p>Turn your birthday into a gaming event!</p>
-            <p>Take up a challenge and win prizes!</p>
+            <p>Tournaments, co-op gaming, music setups, prizes and much more!</p>
           </div>
         </div>
         <div class="nextgen-service-box">
@@ -219,8 +221,8 @@
           </div>
           <div class="nextgen-service-box-text">
             <h4>Team Building</h4>
-            <p>All the hottest titles of eSports and more!</p>
-            <p>Take up a challenge and win prizes!</p>
+            <p>We organize team-building sessions with co-op and tournament gaming experiences.</p>
+            <p>Contact us for more information about available schedule.</p>
           </div>
         </div>
       </div>
@@ -231,10 +233,11 @@
           </div>
         </div>
         <div class="icons">
-          <h5>NextGen</h5>
-          <p>Classic reborn!</p>
-          <p>Lets rip through hell itself, leave no demon alive.</p>
-          <p class="mb-12">Time to grease up the good old chainsaw.</p>
+          <h5>Visit us Today!</h5>
+          <p>Turn your gaming sessions into an immersive experience.</p>
+          <p>Get a refreshment and enjoy your time with us.</p>
+          <p class="mb-12">Stay up to date for our upcoming events and tournaments.</p>
+          <p>Looking forward seeing you, gamers.</p>
         </div>
       </div>
     </div>
@@ -245,9 +248,12 @@
 <section>
   <div class="para-container">
     <div class="para-background" id="para">
-      <div class="para-title">
-        <img src="img/secretLabLogo1.png" alt="secret lab logo" />
-      </div>
+      <a href="https://secretlab.eu/" class="para-title" target="_blank">
+        <div >
+          <img src="img/secretLabLogo1.png" alt="secret lab logo" />
+          <h2>Professional Gaming Chairs</h2>
+        </div>
+      </a>
     </div>
   </div>
 </section>
@@ -325,6 +331,7 @@
           <div class="monster-can-right">
             <h4>Absolute Zero</h4>
             <p>Low sugar, low carbs cooling refreshment.</p>
+            <p>Less calories for more taste and icey cold aroma</p>
             <p></p>
           </div>
         </div>
@@ -341,6 +348,8 @@
           </div>
           <div class="monster-can-right">
             <h4>Ultra Sunshine</h4>
+            <p>Summer taste throughout the year</p>
+            <p>Let the sunshine refresh you with tropical fruit flavors</p>
           </div>
         </div>
       </div>
@@ -358,7 +367,8 @@
           </div>
           <div class="monster-can-right">
             <h4>Ultra Citrone</h4>
-            <p>Original Monster taste</p>
+            <p>Citrone now overpowered</p>
+            <p>Strong taste for those who seek something different in their energy drinks</p>
           </div>
         </div>
       </div>
@@ -374,6 +384,8 @@
           </div>
           <div class="monster-can-right">
             <h4>Ultra Red</h4>
+            <p>Red hot flaming hi speed aroma for those looking for that special kick</p>
+            <p>New flavor of you favorite energy drink</p>
           </div>
         </div>
       </div>
@@ -391,7 +403,8 @@
           </div>
           <div class="monster-can-right">
             <h4>Low-Carb</h4>
-            <p>Original Monster taste</p>
+            <p>Less carbs, less sugar, much more spicy aroma</p>
+            <p>Enjoy the energizing taste, high speed and no drag</p>
           </div>
         </div>
       </div>
@@ -407,6 +420,8 @@
           </div>
           <div class="monster-can-right">
             <h4>Lewis Hamilton</h4>
+            <p>Named after a Formula 1 driving legend, let Lewis take you for a ride of you life</p>
+            <p>Amazing new flavor that stood the test of time and is back for good.</p>
           </div>
         </div>
       </div>
