--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <div class="para-container">
     <div class="para-background" id="para">
       <a href="https://secretlab.eu/" class="para-title" target="_blank">
-        <div >
+        <div class="">
           <img src="img/secretLabLogo1.png" alt="secret lab logo" />
           <h2>Professional Gaming Chairs</h2>
         </div>
