--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="row row-2">
         <div class="profile">
           <div class="profile-img">
-            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+            <img src="img/nextgenLogo3.png" alt="NextGen gaming house logo" />
           </div>
         </div>
         <div class="icons">
@@ -229,7 +229,7 @@
       <div class="row row-2">
         <div class="profile">
           <div class="profile-img">
-            <img src="img/nextgenLogo2.png" alt="NextGen gaming house logo" />
+            <img src="img/nextgenToken1.png" alt="NextGen gaming house logo" />
           </div>
         </div>
         <div class="icons">
